--- a/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -143,9 +143,10 @@
                             <li class="nav-item" id="Products"><a class="nav-link " href="/Admin/Products">Product</a></li>
                             <li class="nav-item" id="ProductDetails"> <a class="nav-link " href="/Admin/ProductDetails">Product detail</a></li>
                             <li class="nav-item" id="ProductCategory"><a class="nav-link " href="/Admin/ProductCategory">Category</a></li>
+                            <li class="nav-item" id="ManageOrders"><a class="nav-link " href="/Admin/ManageOrders">Order Management</a></li>
                             <li class="nav-item" id="Orders"><a class="nav-link " href="/Admin/Orders">Order</a></li>
                             <li class="nav-item" id="OrderDetails"> <a class="nav-link " href="/Admin/OrderDetails">Order detail</a></li>
-                    </div>
+</div>
                 </nav>
             </div>
             <div class="col-12 col-lg-8 col-xl-9 pb-3">
