--- a/MVC/Areas/Admin/Views/Products/Add.cshtml
+++ b/MVC/Areas/Admin/Views/Products/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MVC.Models.Product
-@using (Html.BeginForm("Add", "Products", FormMethod.Post, new { id = "formAdd" }))
+@using (Html.BeginForm("Add", "Products", FormMethod.Post, new { id = "formAdd", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken();
     @Html.ValidationSummary(true, "", new { @class = "alert-danger" });
@@ -26,8 +26,9 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputEmailAU">Image</label>
-                @Html.TextBoxFor(model => model.Image, new {@class = "form-control", id = "InputNameAU" })
-                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                <input type="file" name="Hinh" value="" required class="form-control-file" />
+                @*//@Html.TextBoxFor(model => model.Image, new {@hidden = true})
+                //@Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })*@
             </div>
         </div>
     </div>
