--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@ ViewBag.Active = "#HomeBtn";
                         <div class="carousel-item active">
                             <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                 <a href="/Product/Detail/@Model.ListBestSaler[0].ProductID">
-                                    <img src="/@Model.ListBestSaler[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                    <img src="@Url.Content(Model.ListBestSaler[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                 </a>    
                             </div>
                         </div>
@@ -93,7 +93,7 @@ ViewBag.Active = "#HomeBtn";
                             <div class="carousel-item ">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                     <a href="/Product/Detail/@Model.ListBestSaler[i].ProductID">
-                                        <img src="/@Model.ListBestSaler[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        <img src="@Url.Content(Model.ListBestSaler[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@ ViewBag.Active = "#HomeBtn";
                         <div class="carousel-item active">
                             <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                 <a href="/Product/Detail/@Model.ListNew[0].ProductID">
-                                    <img src="/@Model.ListNew[0].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                    <img src="@Url.Content(Model.ListNew[0].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                 </a>
                             </div>
                         </div>
@@ -135,7 +135,7 @@ ViewBag.Active = "#HomeBtn";
                             <div class="carousel-item ">
                                 <div class="col-6 col-sm-4 col-md-3 col-lg-3 col-xl-2 d-block float-left">
                                     <a href="/Product/Detail/@Model.ListNew[i].ProductID">
-                                        <img src="/@Model.ListNew[i].ImageLink" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
+                                        <img src="@Url.Content(Model.ListNew[i].ImageLink)" alt="Alternate Text" class="image-on-home d-block img-fluid m-auto" />
                                     </a>
                                 </div>
                             </div>
