--- a/MVC/Views/Product/Index.cshtml
+++ b/MVC/Views/Product/Index.cshtml
@@ -51,7 +51,7 @@
                             <div class="view view-eighth">
                                 <a href="/Product/Detail/@item.ProductID" class="text-decoration-none text-dark product">
                                     <div class="card border-0">
-                                        <img src="/@item.ImageLink" alt="Alternate Text" class="image-on-home m-auto" />
+                                        <img src="@Url.Content(item.ImageLink)" alt="Alternate Text" class="image-on-home m-auto" />
                                     </div>
                                     <div class="card-body p-0">
                                         <div class="row">
