--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -184,7 +184,7 @@
                         <li class="nav-item">
                             <div class="dropdown">
                                 <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="/@ViewBag.UserAvatar" alt="User's Avatar" class="rounded-circle" width="20px" />
+                                    <img src="@Url.Content(ViewBag.UserAvatar)" alt="User's Avatar" class="rounded-circle" width="20px" />
 
                                     <span class="text-white p-2 my-1"> @ViewBag.UserName</span>
 
