--- a/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
+++ b/MVC/Areas/Admin/Views/ManageOrders/Index.cshtml
@@ -46,7 +46,7 @@
             <div class="col-1">
                 <div class="row">
                     <div class="col-auto mx-auto">
-                        <img src="/@item.Image" alt="Alternate Text" width="80" height="80" />
+                        <img src="@Url.Content(item.Image)" alt="Alternate Text" width="80" height="80" />
                     </div>
                 </div>
             </div>
