--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
     <div class="container sticky-top container-hard border-0">
 
         <nav class="navbar bg-info navbar-dark navbar-expand-lg ">
-            <a class="navbar-brand" href="#">Ốp xịn</a>
+            <a class="navbar-brand" href="/Home">Ốp xịn</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -184,7 +184,7 @@
                         <li class="nav-item">
                             <div class="dropdown">
                                 <a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="@Url.Content(ViewBag.UserAvatar)" alt="User's Avatar" class="rounded-circle" width="20px" />
+                                    <img src="@Url.Content("~/"+ViewBag.UserAvatar)" alt="User's Avatar" class="rounded-circle" width="20px" />
 
                                     <span class="text-white p-2 my-1"> @ViewBag.UserName</span>
 
