--- a/MVC/Areas/Admin/Views/ManageOrders/Detail.cshtml
+++ b/MVC/Areas/Admin/Views/ManageOrders/Detail.cshtml
@@ -54,7 +54,7 @@
                 <div class="col-1">
                     <div class="row">
                         <div class="col-auto mx-auto">
-                            <img src="@Url.Content(product.Image)" alt="Alternate Text" width="80" height="130" />
+                            <img src="@Url.Content("~/"+product.Image)" alt="Alternate Text" width="80" height="130" />
                         </div>
                     </div>
                 </div>
